--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                       <img src="assets/images/border-info.svg" alt="">
                      </div>
                      <div class="meta">
-                         <h4>Restaurant info</h4>
+                         <h4 onclick="listpop4()">Restaurant info</h4>
                          <h5>Map, allergens and hygiene rating</h5>
                      </div>
                    </div>
