--- a/change-password.html
+++ b/change-password.html
@@ -78,10 +78,10 @@
              </div>
              <div class="menu-list">
                 <ul>
-                    <li><a href="/">Account <br> <span> olqaaa@hotmail.com</span></a></li>
+                    <li><a href="/my-account.html">Account <br> <span> olqaaa@hotmail.com</span></a></li>
                     <li><a href="/">Order History</a></li>
                     <li><a href="/">FAQs</a></li>
-                    <li><a href="/">Log out</a></li>
+                    <li><a href="/login.html">Log out</a></li>
                 </ul>
              </div>
              <div class="header-bottom">
@@ -119,7 +119,7 @@
                             <li class="active"><a href="change-password.html">Change Password</a></li>
                             <li><a href="dine-in-verification.html">Dine In Verification</a></li>
                             <li><a href="grab-the-offer.html">Grab the offer</a></li>
-                            <li><a href="logout.html">Logout</a></li>
+                            <li><a href="login.html">Logout</a></li>
                         </ul>
                     </div>
                 </div>  
