--- a/checkout-1.html
+++ b/checkout-1.html
@@ -78,10 +78,10 @@
              </div>
              <div class="menu-list">
                 <ul>
-                    <li><a href="/">Account <br> <span> olqaaa@hotmail.com</span></a></li>
+                    <li><a href="/my-account.html">Account <br> <span> olqaaa@hotmail.com</span></a></li>
                     <li><a href="/">Order History</a></li>
                     <li><a href="/">FAQs</a></li>
-                    <li><a href="/">Log out</a></li>
+                    <li><a href="/login.html">Log out</a></li>
                 </ul>
              </div>
              <div class="header-bottom">
@@ -400,7 +400,7 @@
             <div class="col-xl-4 col-12 d-lg-block d-none">
                 <div class="go-to-checkout-box">
                     <div class="actions">
-                        <a href="/">GO TO CHECKOUT</a>
+                        <a href="/checkout-2.html">GO TO CHECKOUT</a>
                     </div>
                     <div class="flex-area">
                     <div class="increment d-flex">
