--- a/checkout-2.html
+++ b/checkout-2.html
@@ -78,10 +78,10 @@
              </div>
              <div class="menu-list">
                 <ul>
-                    <li><a href="/">Account <br> <span> olqaaa@hotmail.com</span></a></li>
+                    <li><a href="/my-account.html">Account <br> <span> olqaaa@hotmail.com</span></a></li>
                     <li><a href="/">Order History</a></li>
                     <li><a href="/">FAQs</a></li>
-                    <li><a href="/">Log out</a></li>
+                    <li><a href="/login.html">Log out</a></li>
                 </ul>
              </div>
              <div class="header-bottom">
@@ -130,7 +130,7 @@
                                                         <p>or</p>
                                                         </div>
                                                         <div class="button-email">
-                                                            <a href="/"><img src="assets/images/mail.svg" alt=""></i>CONTINUE WITH EMAIL</a>
+                                                            <a href="/checkout-3.html"><img src="assets/images/mail.svg" alt=""></i>CONTINUE WITH EMAIL</a>
                                                         </div> 
                                                         <p class="meta">Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy.</p>     
                                             </div>
