--- a/checkout-address.html
+++ b/checkout-address.html
@@ -84,10 +84,10 @@
              </div>
              <div class="menu-list">
                 <ul>
-                    <li><a href="/">Account <br> <span> olqaaa@hotmail.com</span></a></li>
+                    <li><a href="/my-account.html">Account <br> <span> olqaaa@hotmail.com</span></a></li>
                     <li><a href="/">Order History</a></li>
                     <li><a href="/">FAQs</a></li>
-                    <li><a href="/">Log out</a></li>
+                    <li><a href="/login.html">Log out</a></li>
                 </ul>
              </div>
              <div class="header-bottom">
@@ -180,7 +180,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                
+
                                     <div class="payment-method">
                                         <div class="tophead">
                                             <h2>Payment Method</h2>
