--- a/checkout-3.html
+++ b/checkout-3.html
@@ -78,10 +78,10 @@
              </div>
              <div class="menu-list">
                 <ul>
-                    <li><a href="/">Account <br> <span> olqaaa@hotmail.com</span></a></li>
+                    <li><a href="/my-account.html">Account <br> <span> olqaaa@hotmail.com</span></a></li>
                     <li><a href="/">Order History</a></li>
                     <li><a href="/">FAQs</a></li>
-                    <li><a href="/">Log out</a></li>
+                    <li><a href="/login.html">Log out</a></li>
                 </ul>
              </div>
              <div class="header-bottom">
@@ -126,7 +126,7 @@
                                                 <input type="password" class="form-control" name="" id="" placeholder="" value="">
                                             </div>   
                                             <div class="login-button">
-                                                <a href="/">LOGIN</a>
+                                                <a href="/checkout-4.html">LOGIN</a>
                                             </div>   
                                             <div class="forgot-pass">
                                                 <a href="/">FORGOT PASSWORD?</a>
