--- a/checkout-4.html
+++ b/checkout-4.html
@@ -84,10 +84,10 @@
              </div>
              <div class="menu-list">
                 <ul>
-                    <li><a href="/my-account.html">Account <br> <span> olqaaa@hotmail.com</span></a></li>
+                    <li><a href="my-account.html">Account <br> <span> olqaaa@hotmail.com</span></a></li>
                     <li><a href="/">Order History</a></li>
                     <li><a href="/">FAQs</a></li>
-                    <li><a href="/login.html">Log out</a></li>
+                    <li><a href="login.html">Log out</a></li>
                 </ul>
              </div>
              <div class="header-bottom">
