--- a/index.html
+++ b/index.html
@@ -78,10 +78,10 @@
          </div>
          <div class="menu-list">
             <ul>
-                <li><a href="/my-account.html">Account <br> <span> olqaaa@hotmail.com</span></a></li>
+                <li><a href="my-account.html">Account <br> <span> olqaaa@hotmail.com</span></a></li>
                 <li><a href="/">Order History</a></li>
                 <li><a href="/">FAQs</a></li>
-                <li><a href="/login.html">Log out</a></li>
+                <li><a href="login.html">Log out</a></li>
             </ul>
          </div>
          <div class="header-bottom">
@@ -247,8 +247,8 @@
                                 <div class="col-lg-4 col-sm-6 col-12">
                                     <div class="product-box">
                                         <div class="image-wrapper">
-                                            <a href="/product-detail.html" class="image">
-                                                <img src="./assets/images/grey-back-img-listing.png" alt="">
+                                            <a href="product-detail.html" class="image">
+                                                <img src="assets/images/image.jpeg" alt="">
                                             </a>
                                             <div class="free-delivery">
                                                 <a href="/">FREE DELIVERY</a>
@@ -281,8 +281,8 @@
                                 <div class="col-lg-4 col-sm-6 col-12">
                                     <div class="product-box">
                                         <div class="image-wrapper">
-                                            <a href="/product-detail.html" class="image">
-                                                <img src="assets/images/grey-back-img-listing.png" alt="">
+                                            <a href="product-detail.html" class="image">
+                                                <img src="assets/images/image-2.jpeg" alt="">
                                             </a>
                                             <div class="free-delivery">
                                                 <a href="/">FREE DELIVERY</a>
@@ -315,8 +315,8 @@
                                 <div class="col-lg-4 col-sm-6 col-12">
                                     <div class="product-box">
                                         <div class="image-wrapper">
-                                            <a href="/product-detail.html" class="image">
-                                                <img src="assets/images/grey-back-img-listing.png" alt="">
+                                            <a href="product-detail.html" class="image">
+                                                <img src="assets/images/image-3.jpeg" alt="">
                                             </a>
                                             <div class="free-delivery">
                                                 <a href="/">FREE DELIVERY</a>
@@ -349,8 +349,8 @@
                                 <div class="col-lg-4 col-sm-6 col-12">
                                     <div class="product-box">
                                         <div class="image-wrapper">
-                                            <a href="/product-detail.html" class="image">
-                                                <img src="assets/images/grey-back-img-listing.png" alt="">
+                                            <a href="product-detail.html" class="image">
+                                                <img src="assets/images/image.jpeg" alt="">
                                             </a>
                                             <div class="free-delivery">
                                                 <a href="/">FREE DELIVERY</a>
@@ -383,8 +383,8 @@
                                 <div class="col-lg-4 col-sm-6 col-12">
                                     <div class="product-box">
                                         <div class="image-wrapper">
-                                            <a href="/product-detail.html" class="image">
-                                                <img src="assets/images/grey-back-img-listing.png" alt="">
+                                            <a href="product-detail.html" class="image">
+                                                <img src="assets/images/image.jpeg" alt="">
                                             </a>
                                             <div class="free-delivery">
                                                 <a href="/">FREE DELIVERY</a>
@@ -417,8 +417,8 @@
                                 <div class="col-lg-4 col-sm-6 col-12">
                                     <div class="product-box">
                                         <div class="image-wrapper">
-                                            <a href="/product-detail.html" class="image">
-                                                <img src="assets/images/grey-back-img-listing.png" alt="">
+                                            <a href="product-detail.html" class="image">
+                                                <img src="assets/images/image.jpeg" alt="">
                                             </a>
                                             <div class="free-delivery">
                                                 <a href="/">FREE DELIVERY</a>
@@ -451,8 +451,8 @@
                                 <div class="col-lg-4 col-sm-6 col-12">
                                     <div class="product-box">
                                         <div class="image-wrapper">
-                                            <a href="/product-detail.html" class="image">
-                                                <img src="assets/images/grey-back-img-listing.png" alt="">
+                                            <a href="product-detail.html" class="image">
+                                                <img src="assets/images/image.jpeg" alt="">
                                             </a>
                                             <div class="free-delivery">
                                                 <a href="/">FREE DELIVERY</a>
@@ -485,8 +485,8 @@
                                 <div class="col-lg-4 col-sm-6 col-12">
                                     <div class="product-box">
                                         <div class="image-wrapper">
-                                            <a href="/product-detail.html" class="image">
-                                                <img src="assets/images/grey-back-img-listing.png" alt="">
+                                            <a href="product-detail.html" class="image">
+                                                <img src="assets/images/image.jpeg" alt="">
                                             </a>
                                             <div class="free-delivery">
                                                 <a href="/">FREE DELIVERY</a>
@@ -519,8 +519,8 @@
                                 <div class="col-lg-4 col-sm-6 col-12">
                                     <div class="product-box">
                                         <div class="image-wrapper">
-                                            <a href="/product-detail.html" class="image">
-                                                <img src="assets/images/grey-back-img-listing.png" alt="">
+                                            <a href="product-detail.html" class="image">
+                                                <img src="assets/images/image.jpeg" alt="">
                                             </a>
                                             <div class="free-delivery">
                                                 <a href="/">FREE DELIVERY</a>
