--- a/product-detail.html
+++ b/product-detail.html
@@ -78,10 +78,10 @@
              </div>
              <div class="menu-list">
                 <ul>
-                    <li><a href="/my-account.html">Account <br> <span> olqaaa@hotmail.com</span></a></li>
+                    <li><a href="my-account.html">Account <br> <span> olqaaa@hotmail.com</span></a></li>
                     <li><a href="/">Order History</a></li>
                     <li><a href="/">FAQs</a></li>
-                    <li><a href="/login.html">Log out</a></li>
+                    <li><a href="login.html">Log out</a></li>
                 </ul>
              </div>
              <div class="header-bottom">
@@ -292,7 +292,7 @@
                         <button type="submit" class="btn">CANCEL</button>
                     </div>
                     <div class="button2">
-                        <button type="button"  onclick="location.href='/checkout-1.html'" class="btn">ADD TO CART</button>
+                        <button type="button"  onclick="location.href='checkout-1.html'" class="btn">ADD TO CART</button>
                     </div>
                 </div>
             </div>
@@ -418,7 +418,7 @@
                                 <button type="submit" class="btn">CANCEL</button>
                             </div>
                             <div class="button2">
-                               <button type="button"  onclick="location.href='/checkout-1.html'" class="btn">ADD TO CART</button>
+                               <button type="button"  onclick="location.href='checkout-1.html'" class="btn">ADD TO CART</button>
                             </div>
                             </div>
                 </div>
@@ -431,6 +431,7 @@
         </div>
         <div class="container">
                     <div class="listing-popup1-wrapper">
+                        <div class="card-body">
                         <div class="popup1-header">
                             <h2>Steamed Pork & Vegetable Dumpling
                                 (8pc) </h2>
@@ -453,12 +454,13 @@
                                     <div class="addup"><img src="assets/images/decrement.svg" alt=""></div>
                           </div>
                            </div>
+                        </div>
                                 <div class="popup1-button">
                                 <div class="button1">
                                     <button type="submit" class="btn" onclick="listpop3()">CANCEL</button>
                                 </div>
                                 <div class="button2">
-                                   <button type="button"  onclick="location.href='/checkout-1.html'" class="btn">ADD TO CART</button>
+                                   <button type="button"  onclick="location.href='checkout-1.html'" class="btn">ADD TO CART</button>
                                 </div>
                                 </div>
                     </div>                
@@ -472,11 +474,11 @@
         <div class="container">
                     <div class="listing-popup1-wrapper">
                         <div class="popup01-header">
-                            <div class="popup01-cross-icon"><img src="assets/images/Component41–17.svg" alt=""></div>
                             <div class="title">
                             <h2>Restaurant Info</h2>
                             <img src="assets/images/cancel.svg" alt="" onclick="listpop4()">
                            </div>
+                           <div class="card-body">
                                 <div class="Optional-head">
                                 <h2>Hygience Rating</h2>
                                 <p>Romaine, bacon, chicken, parmesan cheese, crouton, red cabbage, Caesar
@@ -499,7 +501,8 @@
                                     <h2>Restaurants Notes</h2>
                                     <p>Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy.<br>
                                     Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).</p>
-                                </div>                 
+                                </div>   
+                            </div>              
                                    <div class="close-button d-flex justify-content-center">
                                    <button type="submit" class="btn">CLOSE</button>
                                     </div>
