--- a/login.html
+++ b/login.html
@@ -78,7 +78,7 @@
          </div>
          <div class="menu-list">
             <ul>
-                <li><a href="/my-account.html">Account <br> <span> olqaaa@hotmail.com</span></a></li>
+                <li><a href="my-account.html">Account <br> <span> olqaaa@hotmail.com</span></a></li>
                 <li><a href="/">Order History</a></li>
                 <li><a href="/">FAQs</a></li>
                 <li><a href="/">Log out</a></li>
