--- a/index.html
+++ b/index.html
@@ -151,11 +151,8 @@
                                     <div id="collapseOne" class="collapse">
                                         <div class="card-body">
                                             <ul>
-                                                <li class="filter-checkbox">
-                                                    <input type="checkbox" name="" id="chk1">
-                                                    <label for="chk1">Min Order</label>
-                                                </li>
-                                                <li><input type="checkbox" name="" id=""> <a href="/">Open Restaurant</a></li>
+                                                <li class="filter-checkbox"><input type="checkbox" name="" id="chk1"><label for="chk1">Min Order</label></li>
+                                                <li><input type="checkbox" name="" id="chk2"> <label for="chk2">Open Restaurant</label></li>
                                                 <li><input type="checkbox" name="" id=""> <a href="/">Recommended</a></li>
                                                 <li><input type="checkbox" name="" id=""> <a href="/">Delivery Time</a></li>
                                                 <li><input type="checkbox" name="" id=""> <a href="/">Top rated</a></li>
