--- a/index.html
+++ b/index.html
@@ -155,10 +155,22 @@
                                                     <input type="checkbox" name="" id="chk1">
                                                     <label for="chk1">Min Order</label>
                                                 </li>
-                                                <li><input type="checkbox" name="" id=""> <a href="/">Open Restaurant</a></li>
-                                                <li><input type="checkbox" name="" id=""> <a href="/">Recommended</a></li>
-                                                <li><input type="checkbox" name="" id=""> <a href="/">Delivery Time</a></li>
-                                                <li><input type="checkbox" name="" id=""> <a href="/">Top rated</a></li>
+                                                <li class="filter-checkbox">
+                                                    <input type="checkbox" name="" id="chk2"> 
+                                                     <label for="chk2"> Open Restaurant</label>
+                                                </li>
+                                                <li class="filter-checkbox">
+                                                    <input type="checkbox" name="" id="chk3">
+                                                     <label for="chk3"> Recommended</label>
+                                                 </li>
+                                                <li class="filter-checkbox">
+                                                    <input type="checkbox" name="" id="chk4">
+                                                     <label for="chk4">Delivery Time</label>
+                                                </li>
+                                                <li class="filter-checkbox">
+                                                    <input type="checkbox" name="" id="chk5"> 
+                                                     <label for="chk5"> Top rated</label>
+                                                </li>
                                             </ul>
                                         </div>
                                     </div>
@@ -170,10 +182,22 @@
                                     <div id="collapseTwo" class="collapse">
                                         <div class="card-body">
                                             <ul>
-                                                <li><input type="checkbox" name="" id=""> <a href="/">Hygience rating: 5 (11)</a></li>
-                                                <li><input type="checkbox" name="" id=""> <a href="/">Hygience rating: 5 (11)</a></li>
-                                                <li><input type="checkbox" name="" id=""> <a href="/">Hygience rating: 5 (11)</a></li>
-                                                <li><input type="checkbox" name="" id=""> <a href="/">Hygience rating: 5 (11)</a></li>
+                                                <li class="filter-checkbox">
+                                                    <input type="checkbox" name="" id="chk6">
+                                                     <label for="chk6"> Hygience rating: 5 (11)</label>
+                                                </li>
+                                                <li class="filter-checkbox">
+                                                    <input type="checkbox" name="" id="chk7"> 
+                                                     <label for="chk7"> Hygience rating: 5 (11)</label>
+                                                </li>
+                                                <li class="filter-checkbox">
+                                                    <input type="checkbox" name="" id="chk8"> 
+                                                     <label for="chk8"> Hygience rating: 5 (11)</label>
+                                                </li>
+                                                <li class="filter-checkbox">
+                                                    <input type="checkbox" name="" id="chk9"> 
+                                                     <label for="chk9"> Hygience rating: 5 (11)</label>
+                                                </li>
                                             </ul>
                                         </div>
                                     </div>
@@ -186,14 +210,38 @@
                                     <div id="collapseThree" class="collapse">
                                         <div class="card-body">
                                             <ul>
-                                                <li><input type="checkbox" name="" id=""> <a href="/"> All offers (8)</a></li>
-                                                <li><input type="checkbox" name="" id=""> <a href="/">Up to 50% off (1) </a></li>
-                                                <li><input type="checkbox" name="" id=""> <a href="/">Restaurant picks (0)</a></li>
-                                                <li><input type="checkbox" name="" id=""> <a href="/">Order more, save more</a></li>
-                                                <li><input type="checkbox" name="" id=""> <a href="/">Flash deals (1)</a></li>
-                                                <li><input type="checkbox" name="" id=""> <a href="/">30% Off (0)</a></li>
-                                                <li><input type="checkbox" name="" id=""> <a href="/">Free Item (0)</a></li>
-                                                <li><input type="checkbox" name="" id=""> <a href="/">Recommended</a></li>
+                                                <li class="filter-checkbox">
+                                                    <input type="checkbox" name="" id="chk10"> 
+                                                     <label for="chk10"> All offers (8)</label>
+                                                </li>
+                                                <li class="filter-checkbox">
+                                                    <input type="checkbox" name="" id="chk11"> 
+                                                     <label for="chk11"> Up to 50% off (1) </label>
+                                                </li>
+                                                <li class="filter-checkbox">
+                                                    <input type="checkbox" name="" id="chk12"> 
+                                                     <label for="chk12"> Restaurant picks (0)</label>
+                                                </li>
+                                                <li class="filter-checkbox">
+                                                    <input type="checkbox" name="" id="chk13"> 
+                                                     <label for="chk13"> Order more, save more</label>
+                                                </li>
+                                                <li class="filter-checkbox">
+                                                    <input type="checkbox" name="" id="chk14"> 
+                                                    <label for="chk14">Flash deals (1)</label> 
+                                                </li>
+                                                <li class="filter-checkbox">
+                                                    <input type="checkbox" name="" id="chk15"> 
+                                                    <label for="chk15"> 30% Off (0)</label>
+                                                </li>
+                                                <li class="filter-checkbox">
+                                                    <input type="checkbox" name="" id="chk16"> 
+                                                     <label for="chk16"> Free Item (0)</label>
+                                                </li>
+                                                <li class="filter-checkbox">
+                                                    <input type="checkbox" name="" id="chk17">
+                                                     <label for="chk17"> Recommended</label>
+                                                </li>
                                             </ul>
                                         </div>
                                     </div>
@@ -205,13 +253,34 @@
                                     <div id="collapseFour" class="collapse">
                                         <div class="card-body">
                                             <ul>
-                                                <li><input type="checkbox" name="" id=""> <a href="/"> All offers (8)</a></li>
-                                                <li><input type="checkbox" name="" id=""> <a href="/">Up to 50% off (1) </a></li>
-                                                <li><input type="checkbox" name="" id=""> <a href="/">Restaurant picks (0)</a></li>
-                                                <li><input type="checkbox" name="" id=""> <a href="/">Order more, save more</a></li>
-                                                <li><input type="checkbox" name="" id=""> <a href="/">Flash deals (1)</a></li>
-                                                <li><input type="checkbox" name="" id=""> <a href="/">30% Off (0)</a></li>
-                                                <li><input type="checkbox" name="" id=""> <a href="/">Free Item (0)</a></li>
+                                                <li class="filter-checkbox">
+                                                    <input type="checkbox" name="" id="chk18"> 
+                                                     <label for="chk18"> All offers (8)</label>
+                                                </li>
+                                                <li class="filter-checkbox">
+                                                    <input type="checkbox" name="" id="chk19"> 
+                                                     <label for="chk19"> Up to 50% off (1) </label>
+                                                </li>
+                                                <li class="filter-checkbox">
+                                                    <input type="checkbox" name="" id="chk20"> 
+                                                     <label for="chk20"> Restaurant picks (0)</label>
+                                                </li>
+                                                <li class="filter-checkbox">
+                                                    <input type="checkbox" name="" id="chk21"> 
+                                                     <label for="chk21"> Order more, save more</label>
+                                                </li>
+                                                <li class="filter-checkbox">
+                                                    <input type="checkbox" name="" id="chk22"> 
+                                                    <label for="chk22">Flash deals (1)</label> 
+                                                </li>
+                                                <li class="filter-checkbox">
+                                                    <input type="checkbox" name="" id="chk23"> 
+                                                    <label for="chk23"> 30% Off (0)</label>
+                                                </li>
+                                                <li class="filter-checkbox">
+                                                    <input type="checkbox" name="" id="chk24"> 
+                                                     <label for="chk24"> Free Item (0)</label>
+                                                </li>
                                             </ul>
                                         </div>
                                     </div>
@@ -224,13 +293,34 @@
                                     <div id="collapseFive" class="collapse">
                                         <div class="card-body">
                                             <ul>
-                                                <li><input type="checkbox" name="" id=""> <a href="/"> All offers (8)</a></li>
-                                                <li><input type="checkbox" name="" id=""> <a href="/">Up to 50% off (1) </a></li>
-                                                <li><input type="checkbox" name="" id=""> <a href="/">Restaurant picks (0)</a></li>
-                                                <li><input type="checkbox" name="" id=""> <a href="/">Order more, save more</a></li>
-                                                <li><input type="checkbox" name="" id=""> <a href="/">Flash deals (1)</a></li>
-                                                <li><input type="checkbox" name="" id=""> <a href="/">30% Off (0)</a></li>
-                                                <li><input type="checkbox" name="" id=""> <a href="/">Free Item (0)</a></li>
+                                                <li class="filter-checkbox">
+                                                    <input type="checkbox" name="" id="chk25"> 
+                                                     <label for="chk25"> All offers (8)</label>
+                                                </li>
+                                                <li class="filter-checkbox">
+                                                    <input type="checkbox" name="" id="chk26"> 
+                                                     <label for="chk26"> Up to 50% off (1) </label>
+                                                </li>
+                                                <li class="filter-checkbox">
+                                                    <input type="checkbox" name="" id="chk27"> 
+                                                     <label for="chk27"> Restaurant picks (0)</label>
+                                                </li>
+                                                <li class="filter-checkbox">
+                                                    <input type="checkbox" name="" id="chk28"> 
+                                                     <label for="chk28"> Order more, save more</label>
+                                                </li>
+                                                <li class="filter-checkbox">
+                                                    <input type="checkbox" name="" id="chk29"> 
+                                                    <label for="chk29">Flash deals (1)</label> 
+                                                </li>
+                                                <li class="filter-checkbox">
+                                                    <input type="checkbox" name="" id="chk30"> 
+                                                    <label for="chk30"> 30% Off (0)</label>
+                                                </li>
+                                                <li class="filter-checkbox">
+                                                    <input type="checkbox" name="" id="chk31"> 
+                                                     <label for="chk31"> Free Item (0)</label>
+                                                </li>
                                             </ul>
                                         </div>
                                     </div>
